Добавляет метод в user репозиторий, меняя подход к получению всех тасок юзера
